Add restriction against using autoclickers

--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -76,6 +76,7 @@
     <li>Interfering with the security or operation of the Site</li>
     <li>Attempting to gain unauthorized access to data, accounts, or networks</li>
     <li>Uploading, posting, or transmitting content that is harmful, offensive, or infringing on intellectual property rights</li>
+    <li>Using an item such as an autoclicker to hinder site performance</li>
   </ul>
   <p>You must not use the Site in a way that disrupts the experience of other users or imposes an unreasonable burden on Site infrastructure.</p>
 
