Update page removed message with new link
Added a link to the new location of the removed page.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,24 @@
             color: #555;
             margin-top: 12px;
         }
+        .message a {
+            color: #2980b9;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .message a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <div class="message">
         <h1>Page Removed</h1>
         <p>The page you are looking for has been removed.</p>
+        <p>It has moved to:<br>
+        <a href="https://sites.google.com/gihs.sa.edu.au/darwin-quotes" target="_blank">
+            https://sites.google.com/gihs.sa.edu.au/darwin-quotes
+        </a></p>
     </div>
 </body>
 </html>
